# ros_hw

./: README.md
cpr_gazebo/cpr_accessories_gazebo/: CMakeLists.txt  package.xml
cpr_gazebo/cpr_agriculture_gazebo/: CMakeLists.txt  package.xml
cpr_gazebo/cpr_agriculture_gazebo/launch/: agriculture_hunter_final.launch.py
cpr_gazebo/cpr_empty_gazebo/: CMakeLists.txt  package.xml
cpr_gazebo/cpr_empty_gazebo/launch/: my_dog.launch.py
cpr_gazebo/cpr_inspection_gazebo/: CMakeLists.txt  package.xml
cpr_gazebo/cpr_obstacle_gazebo/: CMakeLists.txt  package.xml
cpr_gazebo/cpr_office_gazebo/: CMakeLists.txt  package.xml
cpr_gazebo/cpr_orchard_gazebo/: CMakeLists.txt  package.xml
cpr_gazebo/cpr_race_modules/: CMakeLists.txt  package.xml
ugv_gazebo_sim/: my_agri_world
ugv_gazebo_sim/hunter/hunter2_base/urdf/: hunter2_base.urdf  hunter2_base_gazebo.xacro
ugv_gazebo_sim/hunter/hunter2_gazebo/launch/: agriculture_hunter_full.launch.py  display.launch.py  hunter_empty_world.launch.py  hunter_gazebo.launch.py  hunter_spawn.launch.py  world.launch.py
ugv_gazebo_sim/hunter/hunter2_gazebo/rviz/: deefault_rviz.rviz
ugv_gazebo_sim/hunter/hunter2_gazebo/world/: house.world
ugv_gazebo_sim/hunter/hunter2_gazebo/xacro/: custom_camera.xacro
